--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="content-sobre">
                 <div class="title-content-perfil"><h1>Diretoria Geral</h1></div>
-                <div class="primeiros-perfils">
+                <div class="primeiros-profiles">
                     <a href="#" class="bloco" title="Diretor Geral">
                         <div>
                             <h1>Lívio Lima</h1>
@@ -81,51 +81,51 @@
                 <div class="content-seta-icon">
                     <div id="seta" title="Ver mais"></div>
                 </div>
-                <div class="content-seta-perfils">
+                <div class="content-seta-profiles">
                     <div class="title-content-perfil"><h1>Conselho Fiscal</h1></div>
                     <div class="content-perfil">
-                        <div class="segundos-perfils">
-                            <a href="#" class="bloco" title="Diretor Geral">
+                        <div class="segundos-profiles">
+                            <a href="#" class="bloco" title="Coordenação de Projetos">
                                 <div>
                                     <h1>Angela Carolina</h1>
                                 </div>
                             </a>
-                            <a href="#" class="bloco" title="Diretora Administrativo-Financeira">
+                            <a href="#" class="bloco" title="Mobilização de Recursos e Articulações">
                                 <div>
                                     <h1>Sarah Lucena</h1>
                                 </div>
                             </a>
-                            <a href="#" class="bloco" title="Secretária">
+                            <a href="#" class="bloco" title="Tecnologia da Informação">
                                 <div>
                                     <h1>Leandro Leite</h1>
                                 </div>
                             </a> 
                         </div>
                         <div class="title-content-perfil"><h1>Coordenadorias</h1></div>
-                        <div class="terceiros-perfils">
-                            <a href="#" class="bloco" title="Diretor Geral">
+                        <div class="terceiros-profiles">
+                            <a href="#" class="bloco" title="Agroecologia">
                                 <div>
                                     <h1>Alyson Gomes</h1>
                                 </div>
                             </a>
-                            <a href="#" class="bloco" title="Diretora Administrativo-Financeira">
+                            <a href="#" class="bloco" title="Marketing e Relações Internacionais">
                                 <div>
                                     <h1>Klebernilson Oliveira</h1>
                                 </div>
                             </a>
-                            <a href="#" class="bloco" title="Secretária">
+                            <a href="#" class="bloco" title="Gestão Pública e de Pessoas">
                                 <div>
                                     <h1>Carolina Albuquerque</h1>
                                 </div>
                             </a>
-                            <a href="#" class="bloco" title="Secretária">
+                            <a href="#" class="bloco" title="Empreendedorismo">
                                 <div>
-                                    <h1>Carolina Albuquerque</h1>
+                                    <h1>Leilane Aguiar</h1>
                                 </div>
                             </a>
-                            <a href="#" class="bloco" title="Secretária">
+                            <a href="#" class="bloco" title="Cultura">
                                 <div>
-                                    <h1>Carolina Albuquerque</h1>
+                                    <h1>Janyse Santos</h1>
                                 </div>
                             </a>
                         </div>
